--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -14,9 +14,9 @@ p {
 }
 ul,
 ol {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 img {
   display: block;
@@ -26,6 +26,7 @@ img {
 }
 a {
   color: currentColor;
+  text-decoration: none;
 }
 address {
   font-style: normal;
