--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,11 +1,10 @@
-.client {
+.client__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
 }
 .client__link {
-  // width: 170px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
