--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,11 +1,19 @@
-// .menu-container {
-//   display: none;
-// }
+.menu-container {
+  display: none;
+  @include tablet {
+    display: contents;
+  }
+}
 .navigation__list {
   display: flex;
-  margin-left: 93px;
-  gap: 46px;
-  .link {
+  gap: 50px;
+  @include tablet {
+    margin-left: 88px;
+  }
+  @include desktop {
+    margin-left: 92px;
+  }
+  .navigation__link {
     color: $titleTextColor;
     font-weight: $mediumWeight;
     font-size: 14px;
@@ -23,7 +31,7 @@
       color: $accentColor;
     }
   }
-  .navigation__link--current {
+  .navigation__link_current {
     color: $accentColor;
     position: relative;
     &::after {
@@ -41,8 +49,7 @@
 .contact {
   display: flex;
   margin-left: auto;
-  gap: 50px;
-  .link {
+  &__link {
     font-weight: $mediumWeight;
     font-size: 14px;
     line-height: 1.14;
@@ -57,23 +64,137 @@
       color: $accentColor;
     }
   }
+  @include tablet {
+    flex-wrap: wrap;
+    gap: 10px;
+    width: 160px;
+  }
+  @include desktop {
+    gap: 30px;
+    width: 100%;
+    justify-content: end;
+  }
+  &__icon {
+    fill: currentColor;
+    margin-right: 10px;
+  }
 }
 .header__container {
   display: flex;
   align-items: center;
+  height: 60px;
+  @include tablet {
+    height: 80px;
+  }
 }
-.contact__icon {
-  fill: currentColor;
-  margin-right: 10px;
+.menu-open {
+  fill: $titleTextColor;
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+  padding: 0px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  &:hover,
+  &:focus {
+    fill: $accentColor;
+  }
+  @media screen and (min-width: 767px) {
+    display: none;
+  }
 }
-// .menu-open {
-//   margin-left: auto;
-//   background-color: transparent;
-//   border: none;
-//   padding: 0px;
-//   margin-top: 10px;
-//   margin-bottom: 10px;
-// }
-// .menu-open-icon {
-//   fill: $titleTextColor;
-// }
+.mob-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: $backgroundColor;
+  width: 100vw;
+  height: 100vh;
+  padding: 10px 0px 48px 25px;
+  > .container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
+  }
+}
+.menu-close {
+  fill: $titleTextColor;
+  margin-left: auto;
+  display: block;
+  background-color: transparent;
+  border: none;
+  padding: 0px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: $accentColor;
+  }
+}
+.mob-menu-link {
+  font-weight: $mediumWeight;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: $preSmallLetterSpacing;
+  color: $titleTextColor;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: $accentColor;
+  }
+}
+.mob-menu-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mob-connect-link__mail {
+  font-weight: $mediumWeight;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: $preSmallLetterSpacing;
+  margin-top: 32px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: $accentColor;
+  }
+}
+.mob-connect-link__tel {
+  font-weight: $mediumWeight;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: $preSmallLetterSpacing;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: $accentColor;
+  }
+  margin-bottom: 32px;
+}
+.mob-connect-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mob-connect-list {
+  margin-bottom: 64px;
+}
+.mob-soc-link {
+  font-weight: $mediumWeight;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: $preSmallLetterSpacing;
+  color: $accentColor;
+}
+.mob-soc-list {
+  display: flex;
+  position: relative;
+  gap: 20px;
+}
+.mob-soc-item:not(:last-child)::after {
+  content: '';
+  position: absolute;
+  margin-left: 10px;
+  width: 0;
+  height: 22px;
+  border: 1px solid;
+  color: rgba(33, 33, 33, 0.2);
+}
